feat: concurrency分支合并 - 并发优化与多项功能改进
Co-Authored-By: Claude <noreply@anthropic.com>